--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <div id="div2">
         bigger
     </div>
+
+
+    <div id="div3">
+        <div>H</div>
+        <div>E</div>
+        <div>L</div>
+        <div>L</div>
+    </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="index.js"></script>
 </body>
